--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
+    "mongodb": "^6.11.0",
     "next": "15.0.4",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
